Main page completed

--- a/index.html
+++ b/index.html
@@ -353,7 +353,415 @@
         </section>
     </main>
     <aside>
-
+        <section class="aside-heading">
+            <span>
+                Queue
+            </span>
+            <span>
+                <span>
+                    Queue
+                </span>
+                <i class="fas fa-angle-down"></i>
+            </span>
+        </section>
+        <section class="aside-content">
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+            <div class="aside-song-card">
+                <span class="aside-song-content">
+                    <span>01</span>
+                    <img src="./assets/images/latest.jpeg" alt="">
+                    <span class="aside-song-details">
+                        <pre>Title</pre>
+                        <pre>Title</pre>
+                    </span>
+                </span>
+                <i class="far fa-heart"></i>
+            </div>
+        </section>
     </aside>
 </body>
 </html>
